fixing invisible header title

--- a/style.css
+++ b/style.css
@@ -55,6 +55,11 @@ body {
 	font-family: calluna-sans, sans-serif;
 	font-weight: 300;
 	font-style: normal;
+	border: none;
+	padding-bottom: 0;
+	text-transform: none;
+	font-variant: normal;
+	letter-spacing: .1em;
 }
 
 .book .book-header, .book .book-summary {
